--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <ion-title>Photo Gallery</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+<ion-content padding>
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngFor="let url of imgUrls" size-xs="12" size-sm="6" size-md="4" size-lg="3" size-xl="2">
+        <img src="{{ url }}">
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
